<resources>
    // main
    <string name="app_name">FakeMaps</string>
    <string name="txt_busqueda">Buscar Lugar</string>
    <string name="txt_iregistro">IR A REGISTRO</string>
    <string name="txt_irlogin">IR AL LOGIN</string>
    <string name="txt_cerrar_sesion">CERRAR SESION</string>

    // login
    <string name="txt_escribacorreo">Escriba su correo</string>
    <string name="txt_escribapass">Escriba su contrasena</string>
    <string name="txt_login">INICIAR SESION</string>
    <string name="txt_registro">REGISTRARSE</string>

    //reguistro
    <string name="txt_nombre">Escriba su nombre</string>
    <string name="txt_id">Escriba su cedula</string>
    <string name="txt_ciudad">Escriba su ciudad</string>

    // crear lugar
    <string name="txt_mis_lugares">MIS LUGARES</string>
    <string name="txt_crear_lugar">CREAR LUGAR</string>
    <string name="txt_nombre_lugar">Nombre del lugar</string>
    <string name="txt_descripcion_lugar">Descripcion del lugar</string>
    <string name="txt_categoria_lugar">Categoria del lugar</string>
    <string name="txt_telefono_lugar">Telefono del lugar</string>
    <string name="txt_direccion_lugar">Direccion del lugar</string>

    // validaciones
    <string name="es_obligatorio">Este campo es obligatorio</string>
    <string name="txt_profile">PERFIL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    // menu
    <string name="txt_inicio_menu">Inicio</string>
    <string name="txt_favoritos_menu">Favoritos</string>
    <string name="txt_micuenta_menu">Mi Cuenta</string>

    <string name="lugares_rechazados">lugares rechazados</string>
    <string name="perfil">Perfil</string>
    <string name="cambiar_idioma">Cambiar idioma</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="mas_opciones">Más opciones</string>


    // Lugar adater
    <string name="cierra_a_las">Cierra a las </string>
    <string name="abierto">Abierto</string>
    <string name="cerrado">Cerrado</string>
    <string name="abre_el">Abre el </string>
    <string name="hora_incio">Hora incio</string>
    <string name="hora_cierre">Hora cierre</string>
    <string name="anadir_horario">Anadir horario</string>

    <string name="paso_3">Paso 3/3: Elegir ubicación</string>
    <string name="paso_1">Paso 1/3: Información básica</string>
    <string name="paso_2">Paso 2/3: Selección de horarios</string>
    <string name="horarios_del_lugar">Horarios del lugar</string>


</resources>