<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="-120dp"
        android:padding="16dp">

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/baseline_supervised_user_circle_24"
            android:layout_marginBottom="50dp" />

        <LinearLayout
            android:id="@+id/user_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="?android:attr/selectableItemBackground">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Username"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email"
                android:textSize="16sp"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/user_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Location"
                android:textSize="16sp"
                android:paddingBottom="50dp"
                android:layout_marginBottom="8dp" />

            <Button
                android:id="@+id/btn_misLugares"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginTop="0dp"
                android:text="@string/txt_mis_lugares" />

            <Button
                android:id="@+id/btn_crearLugar"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginTop="0dp"

                android:text="@string/txt_crear_lugar" />

            <Button
                android:id="@+id/btn_cerrar_sesion"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginTop="0dp"

                android:text="@string/txt_cerrar_sesion" />


        </LinearLayout>

    </LinearLayout>
</ScrollView>
