<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/only_session"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SessionOnlyActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CCFFCC"/>

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_profile"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:onClick="irProfile"
            android:text="@string/txt_profile" />

        <Button
            android:id="@+id/btn_crearLugar"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginTop="0dp"
            android:onClick="irACrear"
            android:text="@string/txt_crear_lugar" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginTop="0dp"
            android:onClick="irALogin"
            android:text="@string/txt_irlogin" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/caja_busqueda_menu"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/fondo_busqueda">

        <Button
            android:id="@+id/btn_menu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:fontFamily="@font/font_awesome_6_free_solid_900"
            android:textSize="22sp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="\uf0c9"/>

        <EditText
            android:id="@+id/txt_busqueda"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:hint="Nombre del lugar"
            android:imeOptions="actionSearch"
            android:singleLine="true"
            android:paddingStart="20dp"
            android:paddingEnd="15dp"
            android:background="@null"
            android:drawableEnd="@drawable/baseline_search_24"/>
    </LinearLayout>
</RelativeLayout>
